<resources>
    <string name="app_name">MyVideoteca</string>
    <string name="home">Home</string>


    <!-- Registrazione -->
    <string name="registrati">Registrati</string>
    <string name="crea_account">Crea un nuovo account</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="vai_a_accedi">Hai già un account?</string>

    <!-- Accesso -->
    <string name="accedi">Accedi</string>
    <string name="vai_a_registrati">Non hai un account?</string>
    <string name="benvenuto">Benvenuto!</string>

    <!-- Home -->
    <string name="cerca_film">Cerca film</string>
    <string name="vai_a_carrello">Vai al carrello</string>
    <string name="restituisci">Restituisci film</string>
    <string name="logout">Logout</string>

    <!-- Cerca -->
    <string name="cerca_sottotitolo">Cerca film per titolo, per regista o per genere</string>
    <string name="titolo">Titolo</string>
    <string name="regista">Regista</string>
    <string name="genere">Genere</string>
    <string-array name="genere_film">
        <item>Tutti i generi</item>
        <item>Azione</item>
        <item>Avventura</item>
        <item>Commedia</item>
        <item>Drammatico</item>
        <item>Fantasy</item>
        <item>Fantascienza</item>
        <item>Giallo</item>
        <item>Horror</item>
        <item>Musical</item>
        <item>Romantico</item>
        <item>Storico</item>
        <item>Thriller</item>
        <item>Western</item>
        <item>Animazione</item>
        <item>Documentario</item>
    </string-array>
    <string name="anno">Anno</string>
    <string name="durata_min_max">Durata minima e durata massima</string>
    <string name="durata_min">Durata minima</string>
    <string name="durata_max">Durata massima</string>
    <string name="cerca">Cerca</string>
    <string name="sei_indeciso">Sei indeciso?</string>
    <string name="cerca_popolari"><u>Cerca per film più popolari</u></string>

    <!-- Cerca Risultati -->
    <string name="num_risultati">La ricerca ha prodotto %1$d risultati.</string>
    <string name="aggiungi_al_carrello">Aggiungi al carrello</string>
    <string name="titolo_mockup">Titolo titolo2 titolo3 titolo</string>
    <string name="regista_mockup">Regista</string>
    <string name="anno_e_durata_mockup">%1$d, %2$d min</string>
    <string name="genere_mockup">Genere</string>
    <string name="descrizione_mockup">Descrizione del film</string>
    <string name="copie_disponibili">Copie disponibili: %1$d</string>


    <!-- Carrello -->
    <string name="carrello">Carrello</string>
    <string name="noleggia">Noleggia i film</string>
    <string name="rimuovi_dal_carrello">Rimuovi</string>
    <string name="carrello_vuoto">Il tuo carrello è vuoto. Cerca dei film e aggiungili al carrello! </string>


    <!-- Noleggi Carica -->
    <string name="stiamo_caricando">Stiamo caricando i tuoi noleggi. Attendere prego.</string>
    <!-- Noleggi -->
    <string name="noleggi">Noleggi</string>
    <string name="noleggi_vuoto">Non hai nessun noleggio in corso. Cerca dei film e aggiungili al carrello! </string>
    <string name="inizio_noleggio">Noleggiato il: %1$s </string>
    <string name="scadenza_noleggio">Scade il: %1$s </string>

</resources>