<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registrazione"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="357dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="357dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/mv_logo_dark_round" />

            <TextView
                android:id="@+id/textTitolo"
                style="@style/Titolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/crea_account"/>

            <TextView
                android:id="@+id/textNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="16dp"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:hint="@string/nome"/>

            <TextView
                android:id="@+id/textCognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/cognome" />

            <EditText
                android:id="@+id/editTextCognome"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="16dp"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:hint="@string/cognome"/>

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

            <TextView
                android:id="@+id/textErroriEmail"
                style="@style/ErroreEmailPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:hintEnabled="false"
                app:endIconMode="password_toggle">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:importantForAutofill="no"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textErroriPassword"
                style="@style/ErroreEmailPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp" />

            <Button
                android:id="@+id/buttonRegistrati"
                style="@style/PurpleButton"
                android:layout_marginTop="10dp"
                android:layout_width="320dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/registrati" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textInfoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:text="@string/vai_a_accedi" />

                <TextView
                    android:id="@+id/textAccedi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:text="@string/accedi"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>