<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/carrello"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imgHome"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/mv_logo_light" />

                <TextView
                    android:id="@+id/textHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/home" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="357dp"
                android:layout_height="729dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textTitolo"
                    style="@style/Titolo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/carrello" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/carrelloRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_marginBottom="30dp"
                    android:nestedScrollingEnabled="false"/>

                <Button
                    android:id="@+id/buttonCheckOut"
                    style="@style/PurpleButton"
                    android:layout_marginTop="5dp"
                    android:layout_width="320dp"
                    android:layout_height="54dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:text="@string/check_out" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>