<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cerca"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="100dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imgHome"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/mv_logo_light" />

                <TextView
                    android:id="@+id/textHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/home" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="357dp"
                android:layout_height="500dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textTitolo"
                    style="@style/Titolo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cerca_film" />

                <TextView
                    android:id="@+id/textSottotitolo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:text="@string/cerca_sottotitolo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/editTextCerca"
                        android:background="@drawable/purple_border_background"
                        android:layout_width="220dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:hint="@string/cerca_film"/>

                    <Spinner
                        android:id="@+id/spinnerTipoRicerca"
                        style="@style/PurpleSpinner"
                        android:layout_width="120dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:entries="@array/tipo_ricerca" />

                </LinearLayout>


                <Button
                    android:id="@+id/buttonCerca"
                    style="@style/PurpleButton"
                    android:layout_marginTop="5dp"
                    android:layout_width="320dp"
                    android:layout_height="54dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:text="@string/cerca_film" />

                <TextView
                    android:id="@+id/textOpppure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/oppure" />

                <TextView
                    android:id="@+id/textInfoGeneri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:text="@string/cerca_generi" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical">

                    <Spinner
                        android:id="@+id/spinnerGenere"
                        android:background="@drawable/purple_border_background"
                        android:layout_width="220dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:entries="@array/tipo_ricerca" />

                    <Button
                        android:id="@+id/buttonCercaGenere"
                        style="@style/PurpleButton"
                        android:layout_marginTop="5dp"
                        android:layout_width="120dp"
                        android:layout_height="54dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cerca" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>